force-app/main/default/objects/PosQuota__c/PosQuota__c.object-meta.xml
<CustomObject>
    <description>For System dates. need formula fields so no metadatype</description>
    <label>PosQuota</label>
    <nameField>
        <label>PosQuota Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PosQuota</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>