force-app/main/default/objects/PosQuota__c/fields/QuotaPOSStartDat__c.field-meta.xml
<CustomField>
    <fullName>QuotaPOSStartDat__c</fullName>
    <label>QuotaPOSStartDat</label>
    <type>Date</type>
</CustomField>