force-app/main/default/objects/PosQuota__c/fields/TrackingPeriod__c.field-meta.xml
<CustomField>
    <fullName>TrackingPeriod__c</fullName>
    <formula>&apos;Q&apos;+text(CEILING( MONTH ( QuotaPOSStartDat__c ) / 3 ))+&apos; &apos;+
 text( year(QuotaPOSStartDat__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TrackingPeriod</label>
    <type>Text</type>
</CustomField>